# Code-Evaluation-metrics

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: Code BELU.ipynb  code_bert_score.ipynb  pyccmetrics_metrics.ipynb
