[project]
name = "evulation-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "code-bert-score==0.4.1",
    "codebleu",
    "pyccmetrics>=0.1.2",
    "tree-sitter-java==0.21",
    "tree-sitter-python==0.21",
]

[tool.uv.sources]
codebleu = { git = "https://github.com/k4black/codebleu.git" }
